# Assignment2bClient

./: Activity.cpp  Activity.hpp  AsyncTask.cpp  AsyncTask.hpp  CMakeLists.txt  README.md  UploadAsyncTask.hpp  UploadClient.cpp  UploadClient.hpp
